Update TG to QBC in the API Docs

--- a/source/docs.html.md.erb
+++ b/source/docs.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: TradeGecko API Documentation
+title: QuickBooks Commerce API Documentation
 
 language_tabs: # must be one of https://git.io/vQNgJ
   - ruby
@@ -12,7 +12,7 @@ toc_footers:
 includes:
   - libraries
 
-external_guide_introduction: Check out these guides to start integrating TradeGecko with your external sales channels, fulfillment services or warehouse management systems:&nbsp;
+external_guide_introduction: Check out these guides to start integrating QuickBooks Commerce with your external sales channels, fulfillment services or warehouse management systems:&nbsp;
 
 external_guides:
   - header: Ecommerce Integration
@@ -79,9 +79,9 @@ search: true
 home: false
 ---
 
-# TradeGecko API Reference
+# QuickBooks Commerce API Reference
 
-This website documents the public API for [TradeGecko](https://www.tradegecko.com)
+This website documents the public API for [QuickBooks Commerce](https://www.tradegecko.com)
 
 You can view code examples in the dark area to the right; switch the programming language of the examples with the tabs in the top right.
 
