--- a/source/guides/sales.html.md.erb
+++ b/source/guides/sales.html.md.erb
@@ -1,53 +1,53 @@
 ---
   title: Sales Channel Guide
-  introduction: Use TradeGecko APIs and webhooks to build sales channel integrations, allowing merchants to import orders and products from online stores or marketplaces and to sell anywhere and everywhere.
+  introduction: Use QuickBooks Commerce APIs and webhooks to build sales channel integrations, allowing merchants to import orders and products from online stores or marketplaces and to sell anywhere and everywhere.
   articles:
     sales_channel_resources:
       header: Sales Channel Resources
-      introduction: Before you start working on a sales channel integration with TradeGecko, it’s helpful to understand some of the different sales channel related resources.
+      introduction: Before you start working on a sales channel integration with QuickBooks Commerce, it’s helpful to understand some of the different sales channel related resources.
       subsection:
         - point: <b>Sales Order</b>:&nbsp;Contains information about a sales order, its associated order line items and fulfillments. Order line items contain information such as variants and tax types
           subpoints:
-            - An order in TradeGecko can have 1 of 6 statuses:&nbsp;<code>draft</code>, <code>active</code>, <code>finalized</code>, <code>fulfilled</code>, <code>void</code> or <code>deleted</code>.
+            - An order in QuickBooks Commerce can have 1 of 6 statuses:&nbsp;<code>draft</code>, <code>active</code>, <code>finalized</code>, <code>fulfilled</code>, <code>void</code> or <code>deleted</code>.
         - point: <b>Fulfillment</b>:&nbsp;Represents a shipment of one or more items in a sales order. It includes the line item that the fulfillment applies to, its tracking information and the location of the fulfillment
           subpoints:
-            - A fulfillment object in TradeGecko can have 1 of 4 statuses:&nbsp;<code>packed</code>, <code>fulfilled</code>, <code>void</code> or <code>deleted</code>.
-        - point: <b>Company</b>:&nbsp;Represents a merchant's supplier or customer created and stored in the TradeGecko Relationships section
+            - A fulfillment object in QuickBooks Commerce can have 1 of 4 statuses:&nbsp;<code>packed</code>, <code>fulfilled</code>, <code>void</code> or <code>deleted</code>.
+        - point: <b>Company</b>:&nbsp;Represents a merchant's supplier or customer created and stored in the QuickBooks Commerce Relationships section
         - point: <b>Address</b>:&nbsp;Represents a physical address associated with a merchant's company
 
     authorising_your_sales_channel_integration:
       header: Authorising Your Sales Channel Integration
-      introduction: TradeGecko uses OAuth to authorize third party integrations. As part of the OAuth flow, TradeGecko obtains the user’s authorization and issues an access token that your sales channel can use to interact with the API. To find out more, refer to our <a href="/docs.html#oauth-authentication-flows" target="_blank">OAuth docs</a>.
+      introduction: QuickBooks Commerce uses OAuth to authorize third party integrations. As part of the OAuth flow, QuickBooks Commerce obtains the user’s authorization and issues an access token that your sales channel can use to interact with the API. To find out more, refer to our <a href="/docs.html#oauth-authentication-flows" target="_blank">OAuth docs</a>.
 
     publishing_products_from_tradegecko_to_a_sales_channel:
-      header: Publishing Products from TradeGecko to a Sales Channel
+      header: Publishing Products from QuickBooks Commerce to a Sales Channel
       step1:
         header: Step 1:&nbsp;Get a product, its variants and their inventory levels.
         tips:
-          - As TradeGecko does not enforce variant SKU uniqueness, you are advised to use the TradeGecko variant id instead of SKU to create any mapping between TradeGecko and sales channel variants. This will ensure that incoming sales orders are linked to the correct TradeGecko variants.
+          - As QuickBooks Commerce does not enforce variant SKU uniqueness, you are advised to use the QuickBooks Commerce variant id instead of SKU to create any mapping between QuickBooks Commerce and sales channel variants. This will ensure that incoming sales orders are linked to the correct QuickBooks Commerce variants.
         notes:
           - text: For each variant, we return <code>locations</code>, an array of per-warehouse inventory data about the current variant.
-          - text: When a variant's <code>manage_stock</code> attribute is set to false, the variant's stock level will not be tracked by TradeGecko.
+          - text: When a variant's <code>manage_stock</code> attribute is set to false, the variant's stock level will not be tracked by QuickBooks Commerce.
           - text: When a variant's <code>keep_selling</code> attribute is set to true, the variant can continue to be sold even when the stock level is zero or negative.
           - text: If the variant has a <code>max_online</code> value defined, the sales channel should not display stock levels higher than this value.
-          - text: In TradeGecko, images belong to products. Each image can be assigned to multiple variants of the product. Use the <a target="_blank" href="/docs.html#retrieve-a-particular-image">image endpoint</a> to retrieve variant images.
+          - text: In QuickBooks Commerce, images belong to products. Each image can be assigned to multiple variants of the product. Use the <a target="_blank" href="/docs.html#retrieve-a-particular-image">image endpoint</a> to retrieve variant images.
           - text: Variants may have different prices across price lists. To determine the variant prices to be displayed on the sales channel, you may need to retrieve the merchant's price lists by making a GET request to the price lists endpoint (<code>GET /price_lists</code>). Some relevant price lists include:&nbsp;
             subpoints:
               - The <code>default_order_price_list_id</code> which you can retrieve from the <a href="/docs.html#account" target="_blank">account endpoint.</a>
               - The <code>default_price_list_id</code> which you can retrieve from the <a href="/docs.html#company" target="_blank">company endpoint.</a>
       step2:
-        header: Step 2 (optional):&nbsp;Receive an alert whenever a merchant creates a new product or variant in TradeGecko
+        header: Step 2 (optional):&nbsp;Receive an alert whenever a merchant creates a new product or variant in QuickBooks Commerce
         text: Subscribe to the <code>product.create</code> and <code>variant.create</code> webhooks to be notified when a new product or variant is created by the merchant.
       step3:
-        header: Step 3:&nbsp;Receive an alert whenever the stock level for a variant is updated in TradeGecko
-        text: Subscribe to the <code>variant.stock_level_update</code> webhook to be notified when the stock level for a variant is updated in TradeGecko.
+        header: Step 3:&nbsp;Receive an alert whenever the stock level for a variant is updated in QuickBooks Commerce
+        text: Subscribe to the <code>variant.stock_level_update</code> webhook to be notified when the stock level for a variant is updated in QuickBooks Commerce.
 
     importing_orders_from_a_sales_channel_to_tradegecko:
-      header: Importing Orders from a Sales Channel to TradeGecko
+      header: Importing Orders from a Sales Channel to QuickBooks Commerce
       introduction: Each order includes an array of order line items that needs to be fulfilled. Each order line item can be packed and fulfilled separately, depending on how the inventory is packed and managed.
       step1:
         header: Step 1:&nbsp;Create a sales order.
-        text1: For an existing customer with existing addresses, populate the <code>company_id</code> attribute with the customer's TradeGecko id, and the <code>shipping_address_id</code> and <code>billing_address_id</code> attributes with appropriate TradeGecko address ids. Do note that the <code>billing_address_id</code> defaults to the <code>shipping_address_id</code> if it is not provided.
+        text1: For an existing customer with existing addresses, populate the <code>company_id</code> attribute with the customer's QuickBooks Commerce id, and the <code>shipping_address_id</code> and <code>billing_address_id</code> attributes with appropriate QuickBooks Commerce address ids. Do note that the <code>billing_address_id</code> defaults to the <code>shipping_address_id</code> if it is not provided.
         text2: For an existing customer with a new address, you can embed the address when creating a sales order as seen below. Alternatively, you can manually create a new address using the <a href="/docs.html#create-a-new-address" target="_blank">address endpoint</a>.
         text3: For a new customer, you can embed the the company and shipping address when creating a sales order as seen below. Alternatively, you can manually create <a href="/docs.html#create-a-new-company" target="_blank">a new company</a> and <a href="/docs.html#create-a-new-address" target="_blank">a new address</a>.
       step2:
@@ -57,25 +57,25 @@
       step3:
         header: Step 3 (optional):&nbsp;Fulfill a sales order.
         subpoint1: Fulfill a sales order by sending an API call to <code>POST /orders/[:order_id]/actions/pack</code>. This creates a fulfillment object with status <code>packed</code> and fires a <code>fulfillment.create</code> webhook. Once the fulfillment has been shipped, send an API call to <code>POST /orders/[:order_id]/actions/fulfil</code> which updates the fulfillment object to status <code>fulfilled</code>.
-        subpoint2: Learn more about managing the fulfillment process in TradeGecko <a target="_blank" href="3pl.html">here</a>.
+        subpoint2: Learn more about managing the fulfillment process in QuickBooks Commerce <a target="_blank" href="3pl.html">here</a>.
       step4:
         header: Step 4 (optional):&nbsp;Cancel a sales order.
         text: To cancel a sales order, send an API call to <code>POST /orders/[:order_id]/actions/void</code>.
       notes:
         - If you want to add additional information to a sales order such as special requests for customers or shipping information, you can set the <code>freeform</code> attribute to true and create or update an order line item with these information.
-        - When you create a sales order with a variant that cannot be matched to an existing variant in TradeGecko, either by TradeGecko id or SKU, you will need to create the variant in TradeGecko before re-importing the sales order.
-        - If you want to specify a currency when creating a sales order, pass in the <code>currency_iso</code> when creating or updating a sales order and TradeGecko would find a matching currency. However, if the currency matching fails, you will need to create the currency first. You can also cache the currencies and check if a particular currency exists before creating a new sales order.
+        - When you create a sales order with a variant that cannot be matched to an existing variant in QuickBooks Commerce, either by QuickBooks Commerce id or SKU, you will need to create the variant in QuickBooks Commerce before re-importing the sales order.
+        - If you want to specify a currency when creating a sales order, pass in the <code>currency_iso</code> when creating or updating a sales order and QuickBooks Commerce would find a matching currency. However, if the currency matching fails, you will need to create the currency first. You can also cache the currencies and check if a particular currency exists before creating a new sales order.
 
     handling_returns:
       header: Handling Returns
       introduction:
         - Depending on a merchant's return policy, there may be a need to create a fulfillment return or void an order. You can return an entire order or part of an order.
-        - In the event that your company is handling the return through TradeGecko API, you can create a <code>fulfillment_return</code> as shown below:&nbsp;
+        - In the event that your company is handling the return through QuickBooks Commerce API, you can create a <code>fulfillment_return</code> as shown below:&nbsp;
       tips:
         - If fulfillment return creation is handled by the merchant, you can subscribe to the <code>fulfillment_return.create</code> webhook to receive notifications.
       notes:
         - You cannot delete a fulfillment if there are any associated fulfillment returns.
-        - If a merchant is integrated with an accounting platform on TradeGecko, creating a fulfillment return would create a credit note on the accounting platform.
+        - If a merchant is integrated with an accounting platform on QuickBooks Commerce, creating a fulfillment return would create a credit note on the accounting platform.
         - Refunds are currently not supported. If you need an endpoint for the refund process, let us know <a target="_blank" href="https://tradegecko.typeform.com/to/A2ewy0">here</a>.
         - You can void an order via the <a target="_blank" href="/docs.html#order-actions">order's void endpoint</a>.
 
