--- a/source/includes/_authentication.md.erb
+++ b/source/includes/_authentication.md.erb
@@ -12,7 +12,7 @@ gecko.authorize_from_existing(<ACCESS_TOKEN>, nil, nil)
 gecko.Product.where(sku: 'moko')
 ```
 
-The TradeGecko API is JSON based. In order to make an authenticated call to the API, you must include your access token with the call. OAuth2 uses a BEARER token that is passed along in an Authorization header.
+The QuickBooks Commerce API is JSON based. In order to make an authenticated call to the API, you must include your access token with the call. OAuth2 uses a BEARER token that is passed along in an Authorization header.
 
 <% current_page.data.asides && current_page.data.asides.each do |resource| %>
   <%= partial "includes/asides/#{resource}" %>
